2008-08-12  Christian Dywan  <christian@imendio.com>

	* src/hildon-*.c
	* src/hildon-*.h: Ensure a consistent include order,
	include <gtk/gtk.h> instead of particular files and
	only include the topmost header in the gtk stack. See NB #39857

2008-08-12  Christian Dywan  <christian@imendio.com>

	* src/hildon-picker-dialog.c
	* src/hildon-touch-selector.c: Fix warnings about unused and
	uninitialized variables.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* examples/Makefile.am
	* examples/hildon-check-button-example.c: Example of the hildon
	check button.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window.h
	* src/hildon-window.c (hildon_window_class_init)
	(hildon_window_unset_program): Don't make
	hildon_window_unset_program a virtual function anymore.

	* src/hildon-stackable-window.c: Update documentation

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* doc/Makefile.am
	* doc/hildon-docs.sgml
	* doc/visual_index.xml
	* src/hildon-defines.c
	* src/hildon-gtk.c
	* src/hildon-helper.c
	* src/hildon-range-editor.c: Lots of documentation fixes.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-picker-button-multicolumn-example.c
	(create_touch_selector): Fix compilation warning.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c (hildon_pannable_area_button_press_cb)
	(hildon_pannable_area_button_release_cb)
	(hildon_pannable_get_child_widget_at): Fix compilation warnings.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_add_image_size_group): Fix
	assertion.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-bread-crumb-trail.h
	* src/hildon-date-editor.c
	* src/hildon-date-selector.c
	* src/hildon-pannable-area.c
	* src/hildon-picker-dialog.c
	* src/hildon-time-selector.c
	* src/hildon-touch-selector-entry.c
	* src/hildon-touch-selector.c
	* src/hildon-touch-selector.h: Misc documentation fixes
